--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "@studio-freight/lenis": "^1.0.42",
+    "framer-motion": "^12.23.12",
+    "gsap": "^3.13.0",
+    "locomotive-scroll": "^4.1.4",
+    "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.4.6"
+    "react-icons": "^5.5.0",
+    "swiper": "^9.4.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
